--- a/trunk/timetracker/timetracker-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/timetracker/timetracker-webapp/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,17 @@
 	<display-name>Timetracker Web Application</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/timetracker-core.xml classpath:/timetracker-hibernate.xml</param-value>
+		<param-value>classpath:/timetracker-core.xml classpath:/timetracker-hibernate.xml /WEB-INF/timetracker-security.xml</param-value>
 	</context-param>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+      <filter-name>springSecurityFilterChain</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
